tests/failing/bad-return-value-1.c
int f1() {
    return true; // wrong type
}